--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 
     <div class="video-section">
         <div class="large-video">
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="100%" height="400" src="https://youtu.be/6ibCtsHgz3Y" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="small-videos">
-            <iframe class="small-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <iframe class="small-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="small-video" src="https://youtu.be/AUw7laSlcbo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="small-video" src="https://youtu.be/ipdKXJcjP24" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
 
