--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
 
     <div class="video-section">
         <div class="large-video">
-            <!-- Updated video embed link -->
             <iframe width="100%" height="400" src="https://www.youtube.com/embed/AUw7laSlcbo?autoplay=0" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="small-videos">
@@ -260,8 +259,10 @@
             let username = document.getElementById('username').value;
             let password = document.getElementById('password').value;
 
-            if (username === "user" && password === "password") {
+            if (username === "admin" && password === "admin123") {
                 alert("Login successful!");
+                localStorage.setItem("isLoggedIn", "true");
+                window.location.href = "admin.html"; // Redirect to admin page
             } else {
                 alert("Invalid credentials. Please try again.");
             }
