--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
         <p>Your Digital Library</p>
     </header>
 
-    <!-- Login Form -->
     <div class="login-form">
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
@@ -232,19 +231,22 @@
     </div>
 
     <div class="book-list" id="book-list">
+        <!-- Book 1 -->
         <div class="book-item" data-title="Will You Love Me?">
             <img src="https://d26olvxuieoyaa.cloudfront.net/catalog/product/cache/1/small_image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/9/7/9789672459675.jpg" alt="Will You Love Me?">
             <h3>Will You Love Me?</h3>
             <div class="btn-container">
-                <button onclick="window.location.href='https://www.example.com/synopsis/1'">Synopsis</button>
+                <button onclick="window.location.href='https://www.example.com/synopsis/1'">Read Synopsis</button>
                 <button onclick="window.location.href='https://www.example.com/add-to-cart/1'">Add to Cart</button>
             </div>
         </div>
+        
+        <!-- Book 2 -->
         <div class="book-item" data-title="Not Here to Stay">
             <img src="https://d26olvxuieoyaa.cloudfront.net/catalog/product/cache/1/small_image/1000x1000/9df78eab33525d08d6e5fb8d27136e95/9/7/9786299802518.jpg" alt="Not Here to Stay">
             <h3>Not Here to Stay</h3>
             <div class="btn-container">
-                <button onclick="window.location.href='https://www.example.com/synopsis/2'">Synopsis</button>
+                <button onclick="window.location.href='https://www.example.com/synopsis/2'">Read Synopsis</button>
                 <button onclick="window.location.href='https://www.example.com/add-to-cart/2'">Add to Cart</button>
             </div>
         </div>
