--- a/admin.html
+++ b/admin.html
@@ -115,7 +115,15 @@
     <header>
         <h1>Admin Dashboard - BookPedia</h1>
     </header>
-
+<div class="container">
+        <!-- Admin Dashboard Links -->
+        <div class="form-container">
+            <h2>Admin Actions</h2>
+            <a href="book-reviews-management.html">Manage Book Reviews</a><br>
+            <a href="forum-management.html">Manage Forum Posts</a><br>
+			<a href="user-management.html">Manage Users</a><br>
+        </div>
+    </div>
     <div class="container">
         <!-- Book Management Section -->
         <div class="form-container" id="add-book-form">
